--- a/stm32f103_hal_library20_Can_Send_Rec_With_RB/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
+++ b/stm32f103_hal_library20_Can_Send_Rec_With_RB/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
@@ -21,42 +21,15 @@ Target DLL:      Segger\JL2CM3.dll V2.99.43.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-D:\Coding\MCU_Develop\stm32f103_hal_library19_Can_Rec_With_RB\MDK-ARM\stm32f103zet6.uvprojx
+D:\Coding\MCU_Develop\stm32f103_hal_library20_Can_Send_Rec_With_RB\MDK-ARM\stm32f103zet6.uvprojx
 Project File Date:  04/16/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'stm32f103zet6'
-compiling stm32f1xx_hal_gpio_ex.c...
-assembling startup_stm32f103xe.s...
-compiling stm32f1xx_hal_msp.c...
-compiling main.c...
-compiling can.c...
-compiling stm32f1xx_it.c...
-compiling gpio.c...
-compiling stm32f1xx_ll_gpio.c...
-compiling stm32f1xx_hal.c...
-compiling stm32f1xx_ll_exti.c...
-compiling stm32f1xx_ll_rcc.c...
-compiling stm32f1xx_ll_utils.c...
-compiling stm32f1xx_hal_can.c...
-compiling stm32f1xx_hal_rcc.c...
-compiling stm32f1xx_hal_rcc_ex.c...
-compiling stm32f1xx_hal_pwr.c...
-compiling stm32f1xx_hal_gpio.c...
-compiling stm32f1xx_hal_cortex.c...
-compiling stm32f1xx_hal_dma.c...
-compiling stm32f1xx_hal_flash.c...
-compiling stm32f1xx_hal_flash_ex.c...
-compiling stm32f1xx_hal_exti.c...
-compiling stm32f1xx_hal_tim_ex.c...
-compiling stm32f1xx_hal_tim.c...
-compiling system_stm32f1xx.c...
-compiling lwrb_ex.c...
-compiling lwrb.c...
+Build target 'stm32f103zet6'
 compiling myCanDrive.c...
 linking...
-Program Size: Code=5024 RO-data=336 RW-data=12 ZI-data=2916  
+Program Size: Code=4476 RO-data=336 RW-data=12 ZI-data=2924  
 FromELF: creating hex file...
 ".\stm32f103zet6\stm32f103zet6.axf" - 0 Error(s), 0 Warning(s).
 
@@ -82,7 +55,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
