--- a/stm32f103_hal_library19_Can_Rec_With_RB/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
+++ b/stm32f103_hal_library19_Can_Rec_With_RB/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
@@ -27,6 +27,15 @@ Project File Date:  04/19/2025
 <h2>Output:</h2>
 *** Using Compiler 'V6.16', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'stm32f103zet6'
+compiling gpio.c...
+compiling can.c...
+compiling main.c...
+compiling stm32f1xx_hal_msp.c...
+compiling stm32f1xx_it.c...
+compiling myCanDrive.c...
+linking...
+Program Size: Code=5012 RO-data=336 RW-data=12 ZI-data=2916  
+FromELF: creating hex file...
 ".\stm32f103zet6\stm32f103zet6.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
