--- a/stm32f103_hal_library20_Can_Send_Rec_With_RB/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
+++ b/stm32f103_hal_library20_Can_Send_Rec_With_RB/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
@@ -26,37 +26,10 @@ Project File Date:  04/22/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'stm32f103zet6'
-compiling stm32f1xx_hal_gpio_ex.c...
-compiling stm32f1xx_hal_msp.c...
-assembling startup_stm32f103xe.s...
-compiling gpio.c...
-compiling can.c...
-compiling stm32f1xx_it.c...
+Build target 'stm32f103zet6'
 compiling main.c...
-compiling stm32f1xx_ll_rcc.c...
-compiling stm32f1xx_ll_exti.c...
-compiling stm32f1xx_ll_gpio.c...
-compiling stm32f1xx_hal.c...
-compiling stm32f1xx_ll_utils.c...
-compiling stm32f1xx_hal_can.c...
-compiling stm32f1xx_hal_rcc.c...
-compiling stm32f1xx_hal_rcc_ex.c...
-compiling stm32f1xx_hal_pwr.c...
-compiling stm32f1xx_hal_gpio.c...
-compiling stm32f1xx_hal_dma.c...
-compiling stm32f1xx_hal_cortex.c...
-compiling stm32f1xx_hal_flash_ex.c...
-compiling stm32f1xx_hal_tim.c...
-compiling stm32f1xx_hal_tim_ex.c...
-compiling system_stm32f1xx.c...
-compiling stm32f1xx_hal_exti.c...
-compiling stm32f1xx_hal_flash.c...
-compiling myCanDrive.c...
-compiling lwrb_ex.c...
-compiling lwrb.c...
 linking...
-Program Size: Code=6656 RO-data=336 RW-data=12 ZI-data=3764  
+Program Size: Code=6688 RO-data=336 RW-data=12 ZI-data=3764  
 FromELF: creating hex file...
 ".\stm32f103zet6\stm32f103zet6.axf" - 0 Error(s), 0 Warning(s).
 
@@ -82,7 +55,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
