--- a/stm32f103_ll_library22_Basic_Timer/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
+++ b/stm32f103_ll_library22_Basic_Timer/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
@@ -21,15 +21,32 @@ Target DLL:      Segger\JL2CM3.dll V2.99.43.0
 Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
-D:\Coding\MCU_Develop\stm32f103_ll_library21_Can_Rx_Filter\MDK-ARM\stm32f103zet6.uvprojx
-Project File Date:  04/23/2025
+D:\Coding\MCU_Develop\stm32f103_ll_library22_Basic_Timer\MDK-ARM\stm32f103zet6.uvprojx
+Project File Date:  04/28/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'stm32f103zet6'
+Rebuild target 'stm32f103zet6'
+compiling stm32f1xx_ll_gpio.c...
+assembling startup_stm32f103xe.s...
+compiling stm32f1xx_it.c...
+compiling gpio.c...
+compiling dma.c...
+compiling usart.c...
+compiling main.c...
+compiling stm32f1xx_ll_pwr.c...
+compiling stm32f1xx_ll_exti.c...
+compiling stm32f1xx_ll_dma.c...
+compiling system_stm32f1xx.c...
+compiling stm32f1xx_ll_usart.c...
+compiling stm32f1xx_ll_rcc.c...
+compiling stm32f1xx_ll_utils.c...
+compiling lwrb_ex.c...
+compiling lwrb.c...
+compiling myUsartDrive.c...
 compiling myCanDrive_reg.c...
 linking...
-Program Size: Code=3884 RO-data=336 RW-data=4 ZI-data=3716  
+Program Size: Code=4588 RO-data=360 RW-data=4 ZI-data=3172  
 FromELF: creating hex file...
 "stm32f103zet6\stm32f103zet6.axf" - 0 Error(s), 0 Warning(s).
 
@@ -55,7 +72,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@5.6.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
