--- a/stm32f103_ll_library22_Basic_Timer/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
+++ b/stm32f103_ll_library22_Basic_Timer/MDK-ARM/stm32f103zet6/stm32f103zet6.build_log.htm
@@ -26,25 +26,24 @@ Project File Date:  04/28/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'stm32f103zet6'
+Build target 'stm32f103zet6'
 compiling stm32f1xx_ll_gpio.c...
-assembling startup_stm32f103xe.s...
+compiling stm32f1xx_ll_dma.c...
 compiling stm32f1xx_it.c...
-compiling gpio.c...
 compiling dma.c...
-compiling usart.c...
 compiling main.c...
+compiling usart.c...
+compiling gpio.c...
+compiling stm32f1xx_ll_usart.c...
+compiling system_stm32f1xx.c...
+compiling stm32f1xx_ll_rcc.c...
 compiling stm32f1xx_ll_pwr.c...
 compiling stm32f1xx_ll_exti.c...
-compiling stm32f1xx_ll_dma.c...
-compiling system_stm32f1xx.c...
-compiling stm32f1xx_ll_usart.c...
-compiling stm32f1xx_ll_rcc.c...
 compiling stm32f1xx_ll_utils.c...
+compiling myCanDrive_reg.c...
 compiling lwrb_ex.c...
 compiling lwrb.c...
 compiling myUsartDrive.c...
-compiling myCanDrive_reg.c...
 linking...
 Program Size: Code=4588 RO-data=360 RW-data=4 ZI-data=3172  
 FromELF: creating hex file...
